--- a/week_12/day_05/homework/public/css/main.css
+++ b/week_12/day_05/homework/public/css/main.css
@@ -34,10 +34,11 @@ img {
 #planet-div {
   float: left;
   margin-right: 1rem;
-  margin-left: 8rem;
+  margin-left: 10rem;
 }
 
 #ship-div {
-  float: left;
-  margin-left: 4rem;
+  float: right;
+  margin-right: 10rem;
+  margin-left: 1rem;
 }
