--- a/week_15/day_01/imbd/src/App.css
+++ b/week_15/day_01/imbd/src/App.css
@@ -26,3 +26,11 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+h1 {
+  margin-left: 1rem;
+}
+
+.film-box {
+  margin-left: 1rem;
+}
