wk15 d3 - Lab w/Miguel minor edits

--- a/week_15/day_03/tic_tac_toe-master/src/styles/game_grid.css
+++ b/week_15/day_03/tic_tac_toe-master/src/styles/game_grid.css
@@ -7,3 +7,17 @@
   display: grid;
   text-align: center;
 }
+
+button {
+  width: 50px;
+  height: 25px;
+  border-radius: 10px;
+  margin: auto;
+  margin-top: 10px;
+  display: block;
+  text-align: center;
+}
+
+button:hover {
+  border: solid red;
+}
